Adicionado o endpoint categories
